# dokuwiki-mcp

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  memo.txt  pyproject.toml
.agents/: AGENTS.md
architecture_adr_prd/: 01_improving_mcp_semantic_compression.md  02_matrix_category_concept.md  03_future_maturity_plan.md  04_agentic_optimizations.md
codegen/: dokuwiki.json  generate_client.py
docker/: DOKUWIKI.md  Dockerfile
docker/dokuwiki-config/: acl.auth.php  local.php  local.php.bak.php  plugins.local.php  users.auth.php
docker/dokuwiki-data/pages/wiki/: welcome.txt
scripts/: agentic_optimizer.py  analyze_trajectories.py  reset_testbed.py  run_mcp_dev.py  run_mcp_eval.py
src/dokuwiki_mcp/: __init__.py  agentic_tools.py  client.py  config.py  errors.py  server.py  telemetry.py
tests/benchmarks/: benchmarks.json  verifier.py
