[project]
name = "dokuwiki-mcp"
version = "0.1.0"
description = "MCP Server for DokuWiki integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.30.0",
    "yake>=0.7.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"